# entrance

./: .arcconfig  .gitignore  .travis.yml  AUTHORS  ChangeLog  ISSUE_TEMPLATE.md  Makefile.am  README  README.md  TODO  autogen.sh  configure.ac  meson.build  meson_options.txt  sonar-project.properties
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md  bug_report.md
data/: Makefile.am  Makefile.mk  Xsession  entrance  entrance.conf  entrance.conf.in  entrance.other  entrance.pam.d  entrance.service.in
data/sudoers/: entrance.in
data/themes/: Makefile.am
data/themes/beaumonts/: Makefile.am  beaumonts.edc
data/themes/default/: Makefile.am  Makefile.mk  default.edc  meson.build
data/themes/old/: Makefile.am  default.edc
po/: LINGUAS  POTFILES  de.po  entrance.pot  es.po  fr.po  hu.po  it.po  meson.build
src/: Makefile.am
src/daemon/: Makefile.am  Makefile.mk  entrance.c  entrance.h  entrance_action.c  entrance_action.h  entrance_ck_launch.c  entrance_config.c  entrance_config.h  entrance_history.c  entrance_history.h  entrance_image.c  entrance_image.h  entrance_pam.c  entrance_pam.h  entrance_server.c  entrance_server.h  entrance_session.c  entrance_session.h  entrance_test.c  entrance_theme.c  entrance_theme.h  entrance_wait.c  entrance_xserver.c  entrance_xserver.h  meson.build
src/event/: Makefile.am  entrance_event.c  entrance_event.h
tests/: run-tests.sh  xorg.conf
utils/: clean.sh  entrance_xephyr.sh  local_build.sh  local_rebuild_theme.sh
