option('cachedir',
       type       : 'string',
       value      : '/var/cache',
       description: 'Path to cache dir, entrance subdir will be appended')
option('consolekit',
       type       : 'boolean',
       value      : true,
       description: 'Enable support for consolekit (default=true)')
option('debug',
       type       : 'boolean',
       value      : false,
       description: 'Enable support for debugging/-g (default=false)')
option('edje-cc',
       type       : 'string',
       description: 'A path to a edje_cc. Defaults to system edje_cc')
option('ekbd',
       type       : 'boolean',
       value      : false,
       description: 'Enable support for virtual keyboard')
option('logind',
       type       : 'boolean',
       value      : false,
       description: 'Enable support for systemd logind or elogind')
option('nls',
	type: 'boolean',
	value: true,
	description: 'Enable localization (default=true)')
option('pam',
       type       : 'boolean',
       value      : true,
       description: 'Enable support for pam (default=true)')
